--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,10 @@ dependencies = [
     "sentence-transformers>=2.2.0",
     "torch>=2.0.0",
 ]
+
+[project.scripts]
+agent = "agent.api:app"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
